--- a/earthquake-map/index.html
+++ b/earthquake-map/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,22 +14,49 @@
         }
     </style>
     <title>Hello, world!</title>
-  </head>
-  <body>
-   <div class='container'>
-       <div id='map'>
-           
-       </div>
-   </div>
+</head>
+
+<body>
+
+    <div class='container-fluid'>
+        <div class='row'>
+            <div class='col-3'>
+                <div class='form'>
+                    <div class='form-group'>
+                        <label class='label'>Lat</label>
+                        <input type='text' class='form-control' id="lat"></input>
+                    </div>
+                    <div class='form-group'>
+                        <label class='label'>Lng</label>
+                        <input type='text' class='form-control' id="lng"></input>
+                    </div>
+                    <div class='form-group'>
+                        <label class='label'>Radius</label>
+                        <input type='text' class='form-control' id="radius"></input>
+                    </div>
+                    <div class='form-group'>
+                        <label class='label'>Mag</label>
+                        <input type='text' class='form-control' id="mag"></input>
+                    </div>
+                    <button id='update-btn' class='btn btn-primary'>Update</button>
+                </div>
+            </div>
+            <div class='col'>
+                <div id='map'>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>  
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTRO3velCzpqwm5VqqdFMWM05-Pnin4jw&callback=init"
-    async defer></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTRO3velCzpqwm5VqqdFMWM05-Pnin4jw&callback=init" async defer></script>
     <script src="map.js"></script>
-  </body>
+</body>
+
 </html>
