Show error if AJAX calls failed

--- a/earthquake-map/index.html
+++ b/earthquake-map/index.html
@@ -21,6 +21,9 @@
     <div class='container-fluid'>
         <div class='row'>
             <div class='col-3'>
+                <div class='alert alert-danger' id='display-error'>
+                    There has been an error! Plesae recheck your latitude or longtitude
+                </div>
                 <div class='form'>
                     <div class='form-group'>
                         <label class='label'>Lat</label>
