--- a/distance-between-points/index.html
+++ b/distance-between-points/index.html
@@ -58,9 +58,9 @@
                 }
 
                 marker2 = new google.maps.Marker({
-                    'position': e.latLng,
-                    'map': map,
-                    'label': '2'
+                    "position": e.latLng,
+                    "map": map,
+                    "label": '2'
                 })
                 
                 let distance = getDistance(marker1.position, marker2.position);
